--- a/react-app/src/components/Layout/Header.scss
+++ b/react-app/src/components/Layout/Header.scss
@@ -7,5 +7,17 @@
   .logo {
     font-weight: 700;
     font-size: 1rem;
+    cursor: pointer;
+  }
+
+  .actions {
+    button {
+      margin-left: 10px;
+    }
+  }
+
+  .authenticated {
+    display: flex;
+    flex-flow: row nowrap;
   }
 }
