--- a/react-app/src/components/App.scss
+++ b/react-app/src/components/App.scss
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+html {
+  background-color: #f0f2f5;
+}
+
 .content-wrapper {
   margin: 20px;
+  background-color: #f0f2f5;
 }
