- field icons - push provider option - fix editor styles - fix auth error - improve loader animation (spin)

--- a/react-app/src/components/Panel/Editor/EditorFieldsList/EditorFieldsList.scss
+++ b/react-app/src/components/Panel/Editor/EditorFieldsList/EditorFieldsList.scss
@@ -6,4 +6,14 @@
       justify-content: space-between;
     }
   }
+
+  .ant-collapse-header {
+    .anticon {
+      margin-right: 10px;
+    }
+
+    .anticon-caret-down {
+      color: #ccc;
+    }
+  }
 }
