--- a/react-app/src/components/App.scss
+++ b/react-app/src/components/App.scss
@@ -9,4 +9,7 @@ html {
 .content-wrapper {
   margin: 20px;
   background-color: #f0f2f5;
+  display: flex;
+  flex-flow: column wrap;
+  // justify-content: center;
 }
