--- a/react-app/src/views/EditView/EditView.scss
+++ b/react-app/src/views/EditView/EditView.scss
@@ -2,13 +2,41 @@
   display: flex;
   flex-flow: row wrap;
   margin: -20px;
+  flex: 1;
+
+  .editor {
+    max-width: 600px;
+  }
 
   & > div {
     flex: 50%;
     border: 1px solid rgb(182, 182, 182);
   }
-  
+
   .form {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
     padding: 20px;
+    // height: 80vh;
+  }
+
+  @media screen and (min-width: 1200px) {
+    .form > div {
+      width: 400px;
+    }
+  }
+
+  @media screen and (max-width: 1200px) {
+    .form > div {
+      width: 30vw;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .form > div {
+      width: 90%;
+    }
   }
 }
