--- a/react-app/src/views/ResponcesView/ResponcesView.scss
+++ b/react-app/src/views/ResponcesView/ResponcesView.scss
@@ -8,4 +8,15 @@
     font-size: 1.4rem;
     margin-bottom: 15px;
   }
+
+  .blank-switch {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    margin-bottom: 15px;
+
+    p {
+      margin-right: 7px;
+    }
+  }
 }
