--- a/react-app/src/components/Layout/Header.scss
+++ b/react-app/src/components/Layout/Header.scss
@@ -33,5 +33,10 @@
   .authenticated {
     display: flex;
     flex-flow: row nowrap;
+
+    .ant-avatar {
+      margin-top: 16px;
+      margin-left: 10px;
+    }
   }
 }
